<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_copyright">© 2014–2015\nPavel Perestoronin, Andrei Menkou</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_google_plus">Google+</string>
    <string name="about_version">Version %1$s\nBuild %2$d</string>
    <string name="about_vkontakte">VKontakte</string>
    <string name="account_auth_failed">Authentication failed. Please check email and password.</string>
    <string name="account_auth_retry">Please remove existing account in System Settings and try again.</string>
    <string name="account_auth_success">Successfully signed in.</string>
    <string name="account_basic">Basic Account</string>
    <string name="account_offline">Offline Account</string>
    <string name="activity_about">About</string>
    <string name="activity_authenticator">@string/app_name</string>
    <string name="activity_feedback">Feedback</string>
    <string name="activity_note">Note</string>
    <string name="activity_pin">Passcode Required</string>
    <string name="activity_settings">Settings</string>
    <string name="app_name">Miary</string>
    <string name="app_subname">Personal Diary</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="backup_message_creating">Creating backup…</string>
    <string name="backup_message_finishing">Finishing…</string>
    <string name="backup_message_restoring">Restoring backup…</string>
    <string name="backup_message_starting">Starting…</string>
    <string name="button_remove">Remove</string>
    <string name="dialog_authenticating">Authenticating…</string>
    <string name="dialog_colorpicker_title">Choose Color</string>
    <string name="dialog_current_pin_title">Current passcode</string>
    <string name="dialog_custom_date_title">Set date and time</string>
    <string name="dialog_new_pin_title">New passcode</string>
    <string name="dialog_pin_hint">4-digit passcode</string>
    <string name="dialog_reminder_days_title">Reminder days</string>
    <string name="dialog_reminder_friday">Friday</string>
    <string name="dialog_reminder_monday">Monday</string>
    <string name="dialog_reminder_saturday">Saturday</string>
    <string name="dialog_reminder_sunday">Sunday</string>
    <string name="dialog_reminder_thursday">Thursday</string>
    <string name="dialog_reminder_time_title">Reminder time</string>
    <string name="dialog_reminder_tuesday">Tuesday</string>
    <string name="dialog_reminder_wednesday">Wednesday</string>
    <string name="dialog_remove_note_message">It will be impossible to restore.</string>
    <string name="dialog_remove_note_title">Remove note?</string>
    <string name="dialog_replacement_table_title">Replacement Table</string>
    <string name="drawer_basic_account">Basic account</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_diary">Diary</string>
    <string name="drawer_item_drafts">Drafts</string>
    <string name="drawer_item_starred">Starred</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="feed_change_sorting_order">Change sorting order</string>
    <string name="feed_empty">Write a note</string>
    <string name="feed_set_ascending">Oldest first.</string>
    <string name="feed_set_descending">Newest first.</string>
    <string name="feedback_hint">Your feedback</string>
    <string name="helper_optional">Optional</string>
    <string name="no_button">No</string>
    <string name="not_really_button">Not really</string>
    <string name="note_color">Change color</string>
    <string name="note_draft">Mark as a draft</string>
    <string name="note_fullscreen">Fullscreen</string>
    <string name="note_hint">Text</string>
    <string name="note_new">New note</string>
    <string name="note_not_draft">Mark as not a draft</string>
    <string name="note_remove">Remove note</string>
    <string name="note_removed">The note is removed.</string>
    <string name="note_reset_custom_date">Reset</string>
    <string name="note_set_custom_date">Set date and time</string>
    <string name="note_share">Share</string>
    <string name="note_star">Star</string>
    <string name="note_title_hint">Title</string>
    <string name="note_unstar">Unstar</string>
    <string name="notification_reminder_content_text">It\'s time to write something.</string>
    <string name="password_hint">Password</string>
    <string name="pin_disabled">Passcode protection is disabled.</string>
    <string name="pin_enabled">Passcode protection is enabled.</string>
    <string name="pin_incorrect">Incorrect passcode.</string>
    <string name="pin_required">Passcode</string>
    <string name="pin_too_short">Passcode is too short.</string>
    <string name="prefcat_title_backup_and_restore">Backup and Restore</string>
    <string name="prefcat_title_reminder">Reminder</string>
    <string name="prefcat_title_security">Security</string>
    <string name="prefcat_title_substitution">Automatic Substitution</string>
    <string name="preference_summary_backup">Backup notes into a file or a cloud storage.</string>
    <string name="preference_summary_backup_dropbox">Backup your notes into Dropbox application folder.</string>
    <string name="preference_summary_backup_json">Supports restoring your notes from backup.</string>
    <string name="preference_summary_backup_plain_text">Simple plain text file.</string>
    <string name="preference_summary_pin">We\'ll ask security passcode after 5 minutes of inactivity.</string>
    <string name="preference_summary_reminder_never">Never</string>
    <string name="preference_summary_restore">Restore your notes from a backup.</string>
    <string name="preference_summary_restore_dropbox">Restore your notes from Dropbox application folder.</string>
    <string name="preference_summary_restore_json">Restore from previously created JSON backup.</string>
    <string name="preference_summary_substitution">Automatically replaces the sequence of characters with a single character.</string>
    <string name="preference_title_backup">Backup</string>
    <string name="preference_title_backup_dropbox">Dropbox</string>
    <string name="preference_title_backup_json">JSON</string>
    <string name="preference_title_backup_plain_text">Plain Text</string>
    <string name="preference_title_enabled">Enabled</string>
    <string name="preference_title_pin">Passcode protection</string>
    <string name="preference_title_reminder_days">Days of week</string>
    <string name="preference_title_reminder_time">Time</string>
    <string name="preference_title_restore">Restore</string>
    <string name="preference_title_restore_dropbox">Dropbox</string>
    <string name="preference_title_restore_json">JSON</string>
    <string name="preference_title_substitution_table">View replacement table</string>
    <string name="prefkey_backup">backup</string>
    <string name="prefkey_backup_dropbox">backup_dropbox</string>
    <string name="prefkey_backup_json">backup_json</string>
    <string name="prefkey_backup_plain_text">backup_plain_text</string>
    <string name="prefkey_pin_enabled">pin_enabled</string>
    <string name="prefkey_reminder_days">reminder_days</string>
    <string name="prefkey_reminder_time">reminder_time</string>
    <string name="prefkey_restore">restore</string>
    <string name="prefkey_restore_dropbox">restore_dropbox</string>
    <string name="prefkey_restore_json">restore_json</string>
    <string name="prefkey_substitution_enabled">substitution_enabled</string>
    <string name="prefkey_substitution_table">substitution_table</string>
    <string name="rate_item_enjoying">Enjoying Miary?</string>
    <string name="rate_item_feedback">Would you mind giving us some feedback?</string>
    <string name="rate_item_rating">How about rating on Google Play, then?</string>
    <string name="rate_item_welcome">Welcome back!</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="toast_backup_finished">%1$d notes are saved to %2$s</string>
    <string name="toast_backup_nothing">Nothing to backup.</string>
    <string name="toast_cancelled">Cancelled.</string>
    <string name="toast_copied">Copied.</string>
    <string name="toast_email_required">Email is required.</string>
    <string name="toast_no_file_manager_app">Install a file manager application.</string>
    <string name="toast_note_drafted">Marked as a draft.</string>
    <string name="toast_note_undrafted">Marked as not a draft.</string>
    <string name="toast_only_one_supported">Only one Miary account is supported.</string>
    <string name="toast_password_required">Password is required.</string>
    <string name="toast_restore_finished">%1$d notes are restored.</string>
    <string name="toast_restore_not_found">Backup is not found.</string>
    <string name="toast_starred">Starred.</string>
    <string name="toast_storage_unready">Storage is not ready.</string>
    <string name="toast_thank_you">Thank you!</string>
    <string name="toast_unstarred">Unstarred.</string>
    <string name="yes_button">Yes</string>
</resources>
