<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/prefcat_title_security"
            android:key="prefcat_security"
    >
        <CheckBoxPreference
                android:title="@string/preference_title_pin"
                android:key="@string/prefkey_pin_enabled"
                android:summary="@string/preference_summary_pin"
                android:defaultValue="false"
        />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/prefcat_title_reminder"
            android:key="prefcat_reminder"
    >
        <MultiSelectListPreference
                android:dialogTitle="@string/dialog_reminder_days_title"
                android:key="@string/prefkey_reminder_days"
                android:summary="@string/preference_summary_reminder_days"
                android:title="@string/preference_title_reminder_days"
                android:entries="@array/weekdays"
                android:entryValues="@array/weekdays_values"
                android:defaultValue="@array/empty_array"
        />

        <Preference
            android:title="@string/preference_title_reminder_time"
            android:key="@string/prefkey_reminder_time"
            android:summary="@string/preference_summary_reminder_time"
        />

    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/prefcat_title_substitution"
            android:key="prefcat_substitution"
    >
        <CheckBoxPreference
                android:title="@string/preference_title_enabled"
                android:key="@string/prefkey_substitution_enabled"
                android:summary="@string/preference_summary_substitution"
                android:defaultValue="true"
        />
        <Preference
                android:title="@string/preference_title_substitution_table"
                android:key="@string/prefkey_substitution_table"
        />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/prefcat_title_account"
            android:key="prefcat_account"
    >
        <Preference
                android:title="@string/preference_title_export"
                android:key="@string/prefkey_export"
                android:summary="@string/preference_summary_export"
        />
    </PreferenceCategory>
</PreferenceScreen>