<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_item_note_starred"
            android:icon="@drawable/ic_starred"
            android:title="@string/note_unstar"
            android:showAsAction="always"
            android:visible="false"
    />
    <item
            android:id="@+id/menu_item_note_not_starred"
            android:icon="@drawable/ic_not_starred"
            android:title="@string/note_star"
            android:showAsAction="always"
            android:visible="false"
    />
    <item
            android:id="@+id/menu_item_note_color"
            android:icon="@drawable/ic_colorpicker_dark"
            android:title="@string/note_color"
            android:showAsAction="always"
    />
    <item
            android:id="@+id/menu_item_note_draft"
            android:title="@string/note_draft"
            android:showAsAction="never"
    />
    <item
            android:id="@+id/menu_item_note_not_draft"
            android:title="@string/note_not_draft"
            android:showAsAction="never"
    />
    <item
            android:id="@+id/menu_item_note_custom_date"
            android:title="@string/note_set_custom_date"
            android:showAsAction="never"
    />
    <item
            android:id="@+id/menu_item_note_remove"
            android:title="@string/note_remove"
            android:showAsAction="never"
    />
</menu>