<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:padding="32dp"
>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_marginBottom="8dp"
    />
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            style="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:gravity="center"
    />
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_subname"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="italic"
            android:gravity="center"
    />
    <EditText
            android:id="@+id/pin_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:gravity="center"
            android:hint="@string/pin_required"
            android:textSize="34dp"
            android:layout_marginTop="@dimen/pin_margin"
            android:layout_marginBottom="@dimen/pin_margin"
    />
</LinearLayout>